<resources>
    <string name="app_name">Novelgram</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="fb_login_protocol_scheme">fb497995777390881</string>

    <!-- Login and Register Text -->
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_btn_login">Login</string>
    <string name="continuar_con_facebook">Continuar con Facebook</string>
    <string name="dont_have_account">¿No tienes una cuenta?, </string>
    <string name="create_here"> Regístrate</string>

    <string name="hint_email">Correo electrónico</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="hint_user">Nombre de Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_btn_create_account">Registrarte</string>
    <string name="toolbar_title_createaccount">Regístrate</string>
    <string name="username_card">Titulo</string>
    <string name="firstword_card">Publicado el</string>
    <string name="timecard_card">....</string>
    <string name="likenumber_card">1 Me Gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_search">Buscar</string>
    <string name="tap_home">Inicio</string>
    <string name="tap_profile">Perfil</string>
    <string name="secondwordlike_detail">Me gusta</string>
    <string name="likenumber_detail">10</string>
    <string name="titleimage_detail">Presentación</string>
    <string name="contentimage_detail">.... </string>
    <string name="transitionname_picture">transitionnamepicture</string>

    <string name="login_error">Error:</string>
    <string name="login_blank">Completar Campos</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_description">Descripcion</string>
    <string name="hint_extra">Extra Info</string>
    <string name="text_btn_create_post">Crear Post</string>
    <string name="message_cameraNotAvailable">La camara no esta disponible</string>
    <string name="message_cameraNotAvailablePermission">La aplicación no cuenta con los permisos necesarios</string>

    <string name="opening_camera">Abriendo la Camera..</string>
    <string name="loading_photo">Cargando Foto..</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_about">Acerca de</string>

    <!-- Notification Text -->
    <string name="login_success">Login Exitoso</string>
    <string name="login_error_face">Error en login</string>
    <string name="login_fallo">La autenticación falló</string>
    <string name="cuenta_creada">Cuenta Creada</string>
    <string name="error_crear_cuenta">Ocurrió un Error al crear la cuenta</string>
    <string name="estableciendo_conexion">Estableciendo conexión....</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
