<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/picture_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@color/grey"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            android:transitionName="@string/transitionname_picture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:background="@color/background_card">

            <TextView
                android:id="@+id/name_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"
                android:fontFamily="@font/quicksand_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_word_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:fontFamily="@font/quicksand_medium"/>

                <TextView
                    android:id="@+id/time_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:fontFamily="@font/quicksand_medium"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margintop_like_card">

                <CheckBox
                    android:id="@+id/like_check_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>

                <TextView
                    android:id="@+id/like_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likenumber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:fontFamily="@font/quicksand_medium"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>
