<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".post.view.PictureDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/transparent">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@color/grey"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"
                android:transitionName="@string/transitionname_picture"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/titlePictureDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/textsize_username_detail"
                android:textColor="@color/primary_text"
                android:text="@string/username_card"
                android:textStyle="bold"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/likeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/textsize_likenumber_detail"
                    android:text="@string/likenumber_detail" />

                <TextView
                    android:id="@+id/secondWordLikeDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumber_detail"
                    android:text="@string/secondwordlike_detail"
                    android:layout_marginStart="7dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:fontFamily="@font/quicksand_medium"/>

                <TextView
                    android:id="@+id/timeCardDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:fontFamily="@font/quicksand_medium"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/contentImageDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/contentimage_detail"
                android:textSize="@dimen/textsize_contentimage_detail" />

            <TextView
                android:id="@+id/secondTitlePictureDetail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:text="@string/titleimage_detail"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textsize_username_detail" />

            <TextView
                android:id="@+id/contentImagePresentation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/contentimage_detail"
                android:textSize="@dimen/textsize_contentimage_detail" />

            <Button
                android:id="@+id/btnEliminarPicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="Eliminar"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:theme="@style/RaiseButtonRed"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_border"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
