<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".login.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:fillViewport="true">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/logo_text"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/usernameLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_min_user_white"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_username" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_min_lock_white"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_btn_login"
                    android:theme="@style/RaiseButtonDark" />


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_donthaveaccount" />

                    <TextView
                        android:id="@+id/txtCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:layout_toEndOf="@+id/dontHaveAccount"
                        android:onClick="goCreateAccount"
                        android:text="@string/create_here"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold" />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>